--- a/index.html
+++ b/index.html
@@ -115,24 +115,25 @@
                 style="width: 100%;" required>
             GMAIL: <input type="text" placeholder="ENTER GMAIL" name="gmail" style="width: 100%;" required>
             <h3>Social media:</h3>
-            LinkedIn: <input type="url" name="linkedin" placeholder="LINKEDIN PROFILE LINK" style="margin-right: 20px;" required>
-            Instagram: <input type="url" name="instagram" placeholder="LINKEDIN PROFILE LINK" required>
-            Leetcode: <input type="url" name="leetcode" placeholder="LINKEDIN PROFILE LINK" required> <br>
+            LinkedIn: <input type="url" name="linkedin" placeholder="eg:https://www.linkedin.com/your_id" style="margin-right: 20px;" required>
+            Instagram: <input type="url" name="instagram" placeholder="eg:https://www.instagram.com/your_id" required> <br>
+            Leetcode: <input type="url" name="leetcode" placeholder="eg:https://www.leetcode.com/your_id" required> <br>
+            
             <h3>Education</h3>
 
             DEGREE: <input type="text" id="degree" class="spacing" name="degree" placeholder="Select Your Degree"
                 list="degrees1"required />
             <datalist id="degrees1">
                 <option value="btech">B.Tech (Bachelor of Technology)</option>
-                <option value="mca">MCA (Master of Computer Applications)</option>
-                <option value="bba">BBA (Bachelor of Business Administration)</option>
-                <option value="mba">MBA (Master of Business Administration)</option>
-                <option value="bsc">B.Sc (Bachelor of Science)</option>
-                <option value="msc">M.Sc (Master of Science)</option>
-                <option value="be">BE (Bachelor of Engineering)</option>
+                <option value="mca">MCA(Master of Computer Applications)</option>
+                <option value="bba">BBA(Bachelor of Business Administration)</option>
+                <option value="mba">MBA(Master of Business Administration)</option>
+                <option value="bsc">B.Sc(Bachelor of Science)</option>
+                <option value="msc">M.Sc(Master of Science)</option>
+                <option value="be">BE(Bachelor of Engineering)</option>
                 <option value="mtech">M.Tech (Master of Technology)</option>
-                <option value="ba">BA (Bachelor of Arts)</option>
-                <option value="ma">MA (Master of Arts)</option>
+                <option value="ba">BA(Bachelor of Arts)</option>
+                <option value="ma">MA(Master of Arts)</option>
             </datalist>
 
             COLLEGE:<input type="text" name="college" placeholder="college name" class="spacing" required>
